@@ -1,0 +1,8 @@
+config FREETZ_PACKAGE_BOX_KEY_PASSWORD_FTPD_PROXY
+	bool "box_key_password_ftpd_proxy 0.1 (binary only)"
+	depends on FREETZ_AVM_VERSION_06_2X_MIN
+	default n
+	help
+		reveal the password for the private key file
+		(/var/flash/websrv_ssl_key.pem) to be able to
+		reuse it for other packages
