@@ -32,6 +32,7 @@ Latest changes:
     * autossh 1.4d
     * avm-forwarding 0.0.1
     * axTLS wrapper 1.4.9
+    * box_key_password_ftpd_proxy
     * cntlm 0.93beta5
     * decrypt FRITZ!OS configs
     * ISC dhcp 4.2.5-P1
